# src/routes/consultant.js
@@ -4,7 +4,7 @@ const rules = require("../validator/rules")
 
 
 router.post('/register', rules.consultant, consultantHandlers.register)
-router.post('/login', rules.consultant, consultantHandlers.login)
+router.post('/login', rules.loginConsultant, consultantHandlers.login)
 
 router.get('/', consultantHandlers.getConsultants)
 
